@@ -1,3 +1,8 @@
+2012-01-28  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/52022
+	* gfortran.dg/dummy_procedure_7.f90: New.
+
 2012-01-25  Jason Merrill  <jason@redhat.com>
 
 	PR target/51934
