@@ -1,3 +1,9 @@
+2012-01-28  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/52022
+	* trans-expr.c (gfc_conv_procedure_call): Fix passing
+	of functions, which return allocatables.
+
 2012-01-25  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/51966
